deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beast-api
  labels: beast-api
spec:
  selector:
    matchLabels:
      app: beast-api
  replicas: 1
  template:
    metadata:
      labels:
        app: beast-api
    spec:
      containers:
      - name: beast-api
        image: REGISTRY_HOSTNAME/GKE_PROJECT/IMAGE:GITHUB_SHA
        ports:
        - containerPort: DEV_BEAST_PORT
